Import of WGDAVIS/Multimedia-SDP-SinisterSdp-0.52 from CPAN.
gitpan-cpan-distribution: Multimedia-SDP-SinisterSdp
gitpan-cpan-version:      0.52
gitpan-cpan-path:         WGDAVIS/Multimedia/SDP/SinisterSdp/Multimedia-SDP-SinisterSdp-0.52.tar.gz
gitpan-cpan-author:       WGDAVIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -13,6 +13,8 @@ you are done with them. (You can write a routine that, for example, returns a
 reference to an inernal object, and even though the container has gone out of
 scope, the internal object wont be destroyed until it too goes out of scope.)
 
+Also removed many needless and redundant XSUBs from SinisterSdp.xs put in there
+by the code generator.
 
 [0.37]
 ----------------------------------------,
